--- a/src/Component/Home/Home.css
+++ b/src/Component/Home/Home.css
@@ -100,6 +100,11 @@
         /* 1 item in a row for even smaller screens */
     }
 }
+img {
+    vertical-align: middle;
+    border-style: none;
+    height: inherit !important;
+}
 .style-8 {
     transition-duration: 0.15s;
     transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
@@ -527,8 +532,6 @@
 
 .image {
     height: inherit;
-    width: inherit;
-
 }
 
 @media (orientation: portrait) {
